added database connection driver - MYSQL

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,14 @@
-PORT=3333
-HOST=0.0.0.0
-NODE_ENV=development
 APP_KEY=V_-KgRPuAp5Xe_iBAUzlKrE3iOW3DN57
+NODE_ENV=development
+
+HOST=0.0.0.0
+PORT=3333
+
 DRIVE_DISK=local
+DB_CONNECTION=mysql
+
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=lucid
+MYSQL_PASSWORD=
+MYSQL_DB_NAME=lucid
