--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "youch-terminal": "^2.1.4"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.2.1",
     "@adonisjs/core": "^5.8.4",
     "@adonisjs/lucid": "^18.1.0",
+    "@adonisjs/redis": "^7.3.0",
     "@adonisjs/repl": "^3.1.11",
     "luxon": "^2.4.0",
     "mysql": "^2.18.1",
