--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@adonisjs/lucid": "^18.1.0",
     "@adonisjs/redis": "^7.3.0",
     "@adonisjs/repl": "^3.1.11",
+    "lodash": "^4.17.21",
     "luxon": "^2.4.0",
     "mysql": "^2.18.1",
+    "phc-argon2": "^1.1.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
