--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@adonisjs/auth": "^8.2.1",
     "@adonisjs/core": "^5.8.4",
+    "@adonisjs/i18n": "^1.5.6",
     "@adonisjs/lucid": "^18.1.0",
     "@adonisjs/redis": "^7.3.0",
     "@adonisjs/repl": "^3.1.11",
